--- a/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
@@ -205,32 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing the difference between notebook output and trusted LALSuite derivative values...\n",
-      "Test passed: the notebook agrees with LALSuite to at least 10 significant digits!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a function to return a set of reasonable input parameters\n",
     "# This function contains three distinct sets of input parameters, and index differentiates between them\n",
     "def reset_values():\n",
     "    # Each variable corresponds to a specific set of input parameters\n",
     "    # -f 20 -M 23 -m 10 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "    values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01,\n",
-    "                  'x': 2.129380593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
-    "                  'px': 0.000000000000000e+00, 'py': 2.335719319721174e-01, 'pz': 0.000000000000000e+00,\n",
-    "                  's1x': 4.857667584940312e-03, 's1y': 9.715170059031998e-03, 's1z': -1.457311282736897e-02,\n",
-    "                  's2x': 3.673094582185491e-03, 's2y': -4.591305803911631e-03, 's2z': 5.509693892529232e-03,\n",
-    "                  'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
-    "                  'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'tortoise': 1,\n",
-    "                  'EMgamma': 5.772156649015329e-01}\n",
+    "    values = {'m1': 2.300000000000000e+01, 'm2': 7.000000000000000e+00, 'eta': 1.788888888888889e-01,\n",
+    "'x': 2.268449467889356e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
+    "'px': 0.000000000000000e+00, 'py': 2.252660404246522e-01, 'pz': -3.388131789017201e-21,\n",
+    "'s1x': 5.290000000000000e+00, 's1y': 1.057848952611384e+01, 's1z': -1.587100687876795e+01,\n",
+    "'s2x': 1.960000000000000e+00, 's2y': -2.449720174641135e+00, 's2z': 2.940233165236426e+00,\n",
+    "'KK': 7.071212750037292e-01, 'k0': -1.324794438776762e+00, 'k1': -1.079079786542628e+00,\n",
+    "'d1v2': -8.253589197530864e+01,'dheffSSv2':7.128959012345678e+00, 'tortoise': 1,\n",
+    "'EMgamma': 5.772156649015329e-01}\n",
     "    # Return the input values\n",
     "    return values\n",
     "\n",
@@ -253,83 +244,78 @@
     "# Create array of trusted LALSuite derivative values\n",
     "# Note that position in the array corresponds to the index of the corresponding input values\n",
     "#-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
-    "LALSuite_validated_values = {'d2Hdrdptheta': -1.886202682729770e-08, 'd2Hdr2': -1.886202682729770e-08}\n",
-    "\n",
-    "# Sort variables by which tortoise value we use to compute the derivatives\n",
-    "variables_tort2 = [x,y,z]\n",
-    "variables_tort1 = [px,py,pz]\n",
-    "\n",
-    "# Call evaluation function\n",
-    "print(\"Computing the difference between notebook output and trusted LALSuite derivative values...\")\n",
-    "\n",
-    "#values = reset_values(2)\n",
-    "#values = evaluate_expression(lhss,rhss,values)\n",
-    "#Hreal = values['Hreal']\n",
-    "#trusted_Hreal = LALSuite_validated_values['Hreal']\n",
-    "#relative_difference = (trusted_Hreal - Hreal)/trusted_Hreal\n",
-    "#if abs(relative_difference) > 1e-9:\n",
-    "#    print(\"The relative difference in Hreal is too large: %.15e\" % relative_difference)\n",
-    "#    sys.exit(1)\n",
-    "\n",
-    "#for var in variables_tort2:\n",
-    "#    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
-    "#    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "#    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
-    "#    if abs(relative_difference) > 1e-9:\n",
-    "#        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
-    "#        sys.exit(1)\n",
-    "\n",
-    "#values = reset_values(1)\n",
-    "#values = evaluate_expression(lhss,rhss,values)\n",
-    "\n",
-    "#for var in variables_tort1:\n",
-    "#    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
-    "#    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "#    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
-    "#    if abs(relative_difference) > 1e-9:\n",
-    "#        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
-    "#        sys.exit(1)\n",
-    "print(\"Test passed: the notebook agrees with LALSuite to at least 10 significant digits!\")"
+    "LALSuite_validated_values = {'d2Hdrdptheta': -9.094362869736959e-04, 'd2Hdr2': 6.816854903609090e-05}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = reset_values()\n",
+    "values = evaluate_expression(lhss,rhss,values)\n",
+    "withrespectto_x  = evaluate_expression(lhss_derivative[x],rhss_derivative[x],values)\n",
+    "withrespectto_y  = evaluate_expression(lhss_derivative[y],rhss_derivative[y],values)\n",
+    "withrespectto_z  = evaluate_expression(lhss_derivative[z],rhss_derivative[z],values)\n",
+    "withrespectto_px = evaluate_expression(lhss_derivative[px],rhss_derivative[px],values)\n",
+    "withrespectto_py = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
+    "withrespectto_pz = evaluate_expression(lhss_derivative[pz],rhss_derivative[pz],values)\n",
+    "\n",
+    "r = values['r']\n",
+    "pphi = r*values['py']\n",
+    "ptheta = -r*values['pz']\n",
+    "\n",
+    "d2Hdx2 = withrespectto_x['Hrealprm_xPrm']/values['eta']\n",
+    "d2Hdxdpy = withrespectto_py['Hrealprm_xPrm']/values['eta']\n",
+    "d2Hdxdpz = withrespectto_pz['Hrealprm_xPrm']/values['eta']\n",
+    "\n",
+    "dpydr = -pphi/r/r\n",
+    "dpzdr = ptheta/r/r\n",
+    "\n",
+    "d2Hdpydx = withrespectto_x['Hrealprm_pyPrm']/values['eta']\n",
+    "d2Hdpydy = withrespectto_y['Hrealprm_pyPrm']/values['eta']\n",
+    "d2Hdpydz = withrespectto_z['Hrealprm_pyPrm']/values['eta']\n",
+    "d2Hdpydpx = withrespectto_px['Hrealprm_pyPrm']/values['eta']\n",
+    "d2Hdpydpy = withrespectto_py['Hrealprm_pyPrm']/values['eta']\n",
+    "d2Hdpydpz = withrespectto_pz['Hrealprm_pyPrm']/values['eta']\n",
+    "\n",
+    "d2Hdpzdx = withrespectto_x['Hrealprm_pzPrm']/values['eta']\n",
+    "d2Hdpzdy = withrespectto_y['Hrealprm_pzPrm']/values['eta']\n",
+    "d2Hdpzdz = withrespectto_z['Hrealprm_pzPrm']/values['eta']\n",
+    "d2Hdpzdpx = withrespectto_px['Hrealprm_pzPrm']/values['eta']\n",
+    "d2Hdpzdpy = withrespectto_py['Hrealprm_pzPrm']/values['eta']\n",
+    "d2Hdpzdpz = withrespectto_pz['Hrealprm_pzPrm']/values['eta']\n",
+    "\n",
+    "dHdpy = withrespectto_py['Hrealprm_py']/values['eta']\n",
+    "dHdpz = withrespectto_pz['Hrealprm_pz']/values['eta']\n",
+    "\n",
+    "dpphidr = values['py']\n",
+    "dpthetadr = -values['pz']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new d2Hdr2 = -1.784024247862658e-06\n",
-      "tru d2Hdr2 = -1.886202682729770e-08\n",
-      "relative diff = -9.358284966919693e+01\n"
+      "new d2Hdr2 = 6.743459925959138e-03\n",
+      "tru d2Hdr2 = 6.816854903609090e-05\n",
+      "relative diff = -9.792333079275174e+01\n"
      ]
     }
    ],
    "source": [
-    "values = reset_values()\n",
-    "values = evaluate_expression(lhss,rhss,values)\n",
-    "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
-    "squirtle = evaluate_expression(lhss_derivative[pz],rhss_derivative[pz],values)\n",
-    "appletun = evaluate_expression(lhss_derivative[x],rhss_derivative[x],values)\n",
-    "d2Hdx2 = appletun['Hrealprm_xPrm']\n",
-    "d2Hdxdpy = quagsire['Hrealprm_xPrm']\n",
-    "r = values['r']\n",
-    "pphi = r*values['py']\n",
-    "d2Hdxdpz = squirtle['Hrealprm_xPrm']\n",
-    "ptheta = -r*values['pz']\n",
-    "d2Hdpydx = appletun['Hrealprm_pyPrm']\n",
-    "d2Hdpy2 = quagsire['Hrealprm_pyPrm']\n",
-    "d2Hdpydpz = squirtle['Hrealprm_pyPrm']\n",
-    "dHdpy = quagsire['Hrealprm_py']\n",
-    "d2Hdpzdx = appletun['Hrealprm_pzPrm']\n",
-    "d2Hdpzdpy = quagsire['Hrealprm_pzPrm']\n",
-    "d2Hdpz2 = squirtle['Hrealprm_pzPrm']\n",
-    "dHdpz = squirtle['Hrealprm_pz']\n",
-    "new_d2Hdr2 = d2Hdx2 - d2Hdxdpy*pphi/r/r + d2Hdxdpz*ptheta/r/r - ((d2Hdpydx - d2Hdpy2*pphi/r/r\n",
-    "                    + d2Hdpydpz*ptheta/r/r)*pphi/r/r - dHdpy*2*pphi/r/r/r) + ((d2Hdpzdx - d2Hdpzdpy*pphi/r/r\n",
-    "                    + d2Hdpz2*ptheta/r/r)*ptheta/r/r - dHdpz*2*ptheta/r/r/r)\n",
+    "new_d2Hdr2 = (d2Hdx2 + d2Hdxdpy*dpydr + d2Hdxdpz*dpzdr\n",
+    "              - (d2Hdpydx + d2Hdpydy + d2Hdpydz + d2Hdpydpx + d2Hdpydpy + d2Hdpydpz)*pphi/r/r\n",
+    "              - dHdpy*(dpphidr/r/r - pphi*2/r/r/r)\n",
+    "              + (d2Hdpzdx + d2Hdpzdy + d2Hdpzdz + d2Hdpzdpx + d2Hdpzdpy + d2Hdpzdpz)*ptheta/r/r\n",
+    "              + dHdpz*(dpthetadr/r/r - ptheta*2/r/r/r))\n",
+    "\n",
     "tru_d2Hdr2 = LALSuite_validated_values['d2Hdr2']\n",
     "print(\"new d2Hdr2 = %.15e\" % new_d2Hdr2)\n",
     "print(\"tru d2Hdr2 = %.15e\" % tru_d2Hdr2)\n",
@@ -345,14 +331,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new d2Hdrdptheta = -1.019576527786982e-02\n",
-      "tru d2Hdrdptheta = -1.886202682729770e-08\n",
-      "relative diff = -5.405435221355637e+05\n"
+      "new d2Hdrdptheta = -7.275190283344086e-03\n",
+      "tru d2Hdrdptheta = -9.094362869736959e-04\n",
+      "relative diff = -6.999670111639728e+00\n"
      ]
     }
    ],
    "source": [
-    "values = reset_values('d2Hdrdptheta')\n",
+    "values = reset_values()\n",
     "values = evaluate_expression(lhss,rhss,values)\n",
     "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
     "d2Hdxdpy = quagsire['Hrealprm_xPrm']/values['eta']\n",
@@ -369,6 +355,25 @@
     "print(\"new d2Hdrdptheta = %.15e\" % new_d2Hdrdptheta)\n",
     "print(\"tru d2Hdrdptheta = %.15e\" % tru_d2Hdrdptheta)\n",
     "print(\"relative diff = %.15e\" % ((tru_d2Hdrdptheta-new_d2Hdrdptheta)/tru_d2Hdrdptheta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-HPrm*Hprm_pz*eta**2/(2*eta*(H - 1) + 1)**(3/2) + Hprm_pzPrm*eta/sqrt(2*eta*(H - 1) + 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dHdx = rhss_derivative[x][-1]\n",
+    "print(dHdx)\n",
+    "#d2Hdr2 = dHdx - dHdpy*pphi/r/r + dHdpz*ptheta/r/r"
    ]
   },
   {
