--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -48,7 +48,7 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "This notebook is organized as follows\n",
+    "This notebook is organized as follows:\n",
     "\n",
     "1. [Step 1](#nrpy): Call on NRPy+ to convert the SymPy expressions for the Weyl scalars and associated invariants into one C-code kernel for each\n",
     "1. [Step 2](#etk): Interfacing with the Einstein Toolkit\n",
@@ -96,21 +96,22 @@
     "!mkdir WeylScal4NRPy     2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
     "!mkdir WeylScal4NRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
     "\n",
-    "scalars_lhrh = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\\\n",
+    "scalars_lhrh = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\n",
     "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i)]\n",
     "\n",
     "if output_scalars == \"all_psis\" or output_scalars == \"all_psis_and_invariants\":\n",
-    "    scalars_lhrh = [\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3r\"),rhs=weyl.psi3r),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3i\"),rhs=weyl.psi3i),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2r\"),rhs=weyl.psi2r),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2i\"),rhs=weyl.psi2i),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1r\"),rhs=weyl.psi1r),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1i\"),rhs=weyl.psi1i),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0r\"),rhs=weyl.psi0r),\\\n",
-    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0i\"),rhs=weyl.psi0i),]\n",
+    "    scalars_lhrh = [\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3r\"),rhs=weyl.psi3r),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi3i\"),rhs=weyl.psi3i),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2r\"),rhs=weyl.psi2r),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi2i\"),rhs=weyl.psi2i),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1r\"),rhs=weyl.psi1r),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi1i\"),rhs=weyl.psi1i),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0r\"),rhs=weyl.psi0r),\n",
+    "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi0i\"),rhs=weyl.psi0i)\n",
+    "                   ]\n",
     "\n",
     "# Generating the CSE is the slowest\n",
     "# operation in this notebook, and much of the CSE\n",
@@ -122,10 +123,24 @@
     "# *identical* expressions). You can expect\n",
     "# roundoff-level differences as a result.\n",
     "psis_CcodeKernel = fin.FD_outputC(\"returnstring\",scalars_lhrh,params=\"outCverbose=False,CSE_sorting=none\")\n",
-    "psis_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
-    "                        [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",psis_CcodeKernel)\n",
-    "with open(\"WeylScal4NRPy/src/WeylScal4NRPy_psis.h\", \"w\") as file:\n",
-    "    file.write(str(psis_looped))\n",
+    "\n",
+    "desc = \"Calculate the Weyl Scalars\"\n",
+    "name = \"calc_psis\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(\"WeylScal4NRPy\",\"src\",name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"\"\"const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "               const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
+    "               const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
+    "               const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "               const CCTK_REAL     *kDD00GF,const CCTK_REAL     *kDD01GF,const CCTK_REAL     *kDD02GF,const CCTK_REAL     *kDD11GF,const CCTK_REAL     *kDD12GF,const CCTK_REAL     *kDD22GF,\n",
+    "               CCTK_REAL *psi4rGF,CCTK_REAL *psi4iGF,\n",
+    "               CCTK_REAL *psi3rGF,CCTK_REAL *psi3iGF,\n",
+    "               CCTK_REAL *psi2rGF,CCTK_REAL *psi2iGF,\n",
+    "               CCTK_REAL *psi1rGF,CCTK_REAL *psi1iGF,\n",
+    "               CCTK_REAL *psi0rGF,CCTK_REAL *psi0iGF\"\"\",\n",
+    "    preloop=\"    DECLARE_CCTK_PARAMETERS;\",\n",
+    "    body     = psis_CcodeKernel,\n",
+    "    loopopts =\"InteriorPoints,Read_xxs\")\n",
     "\n",
     "# Reset the registered gridfunctions list.\n",
     "gri.glb_gridfcs_list = []\n",
@@ -134,15 +149,17 @@
     "\n",
     "import WeylScal4NRPy.WeylScalarInvariants_Cartesian as invar\n",
     "invar.WeylScalarInvariants_Cartesian()\n",
-    "invars_lhrh = [\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIr\"),rhs=invar.curvIr),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIi\"),rhs=invar.curvIi),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJr\"),rhs=invar.curvJr),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJi\"),rhs=invar.curvJi),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J1curv\"),rhs=invar.J1curv),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J2curv\"),rhs=invar.J2curv),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J3curv\"),rhs=invar.J3curv),\\\n",
-    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J4curv\"),rhs=invar.J4curv),]\n",
+    "invars_lhrh = [\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIr\"),rhs=invar.curvIr),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvIi\"),rhs=invar.curvIi),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJr\"),rhs=invar.curvJr),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJi\"),rhs=invar.curvJi),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J1curv\"),rhs=invar.J1curv),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J2curv\"),rhs=invar.J2curv),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J3curv\"),rhs=invar.J3curv),\n",
+    "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"J4curv\"),rhs=invar.J4curv)\n",
+    "              ]\n",
+    "\n",
     "invars_CcodeKernel = fin.FD_outputC(\"returnstring\",invars_lhrh,\n",
     "                    params=\"outCverbose=False,CSE_sorting=none\")# Generating the CSE is the slowest\n",
     "                                                                # operation in this notebook, and much of the CSE\n",
@@ -154,11 +171,23 @@
     "                                                                # *identical* expressions). You can expect\n",
     "                                                                # roundoff-level differences as a result.\n",
     "\n",
-    "invars_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
-    "                          [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",invars_CcodeKernel)\n",
-    "\n",
-    "with open(\"WeylScal4NRPy/src/WeylScal4NRPy_invars.h\", \"w\") as file:\n",
-    "    file.write(str(invars_looped))"
+    "desc = \"Calculate the Weyl Invariants\"\n",
+    "name = \"calc_invars\"\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(\"WeylScal4NRPy\",\"src\",name+\".h\"), desc=desc, name=name,\n",
+    "    params   =\"\"\"const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                 const CCTK_REAL *psi4rGF,const CCTK_REAL *psi4iGF,\n",
+    "                 const CCTK_REAL *psi3rGF,const CCTK_REAL *psi3iGF,\n",
+    "                 const CCTK_REAL *psi2rGF,const CCTK_REAL *psi2iGF,\n",
+    "                 const CCTK_REAL *psi1rGF,const CCTK_REAL *psi1iGF,\n",
+    "                 const CCTK_REAL *psi0rGF,const CCTK_REAL *psi0iGF,\n",
+    "                 CCTK_REAL *curvIrGF,CCTK_REAL *curvIiGF,\n",
+    "                 CCTK_REAL *curvJrGF,CCTK_REAL *curvJiGF,\n",
+    "                 CCTK_REAL *J1curvGF,CCTK_REAL *J2curvGF,\n",
+    "                 CCTK_REAL *J3curvGF,CCTK_REAL *J4curvGF\"\"\",\n",
+    "    preloop=\"    DECLARE_CCTK_PARAMETERS;\",\n",
+    "    body     = invars_CcodeKernel,\n",
+    "    loopopts =\"InteriorPoints\")\n"
    ]
   },
   {
@@ -207,39 +236,8 @@
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "\n",
-    "void calc_psis(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
-    "               const CCTK_REAL invdx0,const CCTK_REAL invdx1,const CCTK_REAL invdx2,\n",
-    "               const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,\n",
-    "               const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
-    "               const CCTK_REAL     *kDD00GF,const CCTK_REAL     *kDD01GF,const CCTK_REAL     *kDD02GF,const CCTK_REAL     *kDD11GF,const CCTK_REAL     *kDD12GF,const CCTK_REAL     *kDD22GF,\n",
-    "               CCTK_REAL *psi4rGF,CCTK_REAL *psi4iGF,\n",
-    "               CCTK_REAL *psi3rGF,CCTK_REAL *psi3iGF,\n",
-    "               CCTK_REAL *psi2rGF,CCTK_REAL *psi2iGF,\n",
-    "               CCTK_REAL *psi1rGF,CCTK_REAL *psi1iGF,\n",
-    "               CCTK_REAL *psi0rGF,CCTK_REAL *psi0iGF)  {\n",
-    "\n",
-    "    DECLARE_CCTK_PARAMETERS;\n",
-    "\n",
-    "#include \"WeylScal4NRPy_psis.h\"\n",
-    "\n",
-    "}\n",
-    "\n",
-    "void calc_invars(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
-    "                 const CCTK_REAL *psi4rGF,const CCTK_REAL *psi4iGF,\n",
-    "                 const CCTK_REAL *psi3rGF,const CCTK_REAL *psi3iGF,\n",
-    "                 const CCTK_REAL *psi2rGF,const CCTK_REAL *psi2iGF,\n",
-    "                 const CCTK_REAL *psi1rGF,const CCTK_REAL *psi1iGF,\n",
-    "                 const CCTK_REAL *psi0rGF,const CCTK_REAL *psi0iGF,\n",
-    "                 CCTK_REAL *curvIrGF,CCTK_REAL *curvIiGF,\n",
-    "                 CCTK_REAL *curvJrGF,CCTK_REAL *curvJiGF,\n",
-    "                 CCTK_REAL *J1curvGF,CCTK_REAL *J2curvGF,\n",
-    "                 CCTK_REAL *J3curvGF,CCTK_REAL *J4curvGF)  {\n",
-    "\n",
-    "    DECLARE_CCTK_PARAMETERS;\n",
-    "\n",
-    "#include \"WeylScal4NRPy_invars.h\"\n",
-    "\n",
-    "}\n",
+    "#include \"calc_psis.h\"\n",
+    "#include \"calc_invars.h\"\n",
     "\n",
     "extern void weylscal4_mainfunction(CCTK_ARGUMENTS) {\n",
     "\n",
@@ -550,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
